--- a/src/components/gallery/gallery.module.scss
+++ b/src/components/gallery/gallery.module.scss
@@ -10,6 +10,7 @@
   &:hover {
     filter: brightness(1.1);
   }
+
   &:active {
     filter: brightness(1);
   }
@@ -17,6 +18,7 @@
 
 .image {
   display: block;
+  width: 100%;
   transition: 0.5s;
 
   &:hover {
