feat: add easter egg

--- a/src/components/gallery/gallery.module.scss
+++ b/src/components/gallery/gallery.module.scss
@@ -4,6 +4,7 @@
 
 .imageWrapper {
   overflow: clip;
+  max-width: 400px;
   margin-bottom: 1em;
   box-shadow: 0 0 0.5em 0.25em var(--main-color);
 
