--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -13,16 +13,37 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   background-color: #000;
+
   &::-webkit-scrollbar {
     width: 0.4em;
     background-color: var(--main-color);
     border-radius: 1em;
   }
+
   &::-webkit-scrollbar-thumb {
     background-color: var(--main-color);
     border-radius: 1em;
   }
+
   &::-webkit-scrollbar-track {
     background-color: #000a;
   }
+}
+
+@keyframes mirror-smooth {
+  0% {
+    transform: rotateY(0turn);
+  }
+
+  50% {
+    filter: invert(1);
+  }
+
+  100% {
+    transform: rotateY(1turn);
+  }
+}
+
+.easter-egg-rotate {
+  animation: 5s mirror-smooth infinite linear;
 }
