--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,9 +1,14 @@
 .header {
+  position: fixed;
+  z-index: 5;
+  inset-inline: 0;
+
   display: flex;
   gap: 1.2em;
   justify-content: space-between;
 
   padding: 1.2em;
 
+  background-color: #000;
   box-shadow: 0 0 0.4em 0.4em var(--main-color);
 }
