--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -33,17 +33,20 @@ body {
 @keyframes mirror-smooth {
   0% {
     transform: rotateY(0turn);
+    filter: invert(0);
   }
 
   50% {
+    transform: rotateY(0.5turn);
     filter: invert(1);
   }
 
   100% {
     transform: rotateY(1turn);
+    filter: invert(0);
   }
 }
 
 .easter-egg-rotate {
-  animation: 5s mirror-smooth infinite linear;
+  animation: 3.5s mirror-smooth infinite linear;
 }
