--- a/src/components/gallery/gallery.module.scss
+++ b/src/components/gallery/gallery.module.scss
@@ -1,5 +1,10 @@
 .gallery {
-  column-count: 5;
+  position: relative;
+  column-count: 3;
+
+  @media (width>48em) {
+    column-count: 5;
+  }
 }
 
 .imageWrapper {
@@ -20,7 +25,7 @@
 .image {
   display: block;
   width: 100%;
-  transition: 0.5s;
+  transition: transform 0.5s;
 
   &:hover {
     transform: scale(1.05);
