--- a/src/components/placeholder/placeholder.module.scss
+++ b/src/components/placeholder/placeholder.module.scss
@@ -1,8 +1,6 @@
 .placeholder {
   position: absolute;
-  inset: 0;
-
-  margin-top: 1em;
+  inset-inline: 0;
 
   font-size: x-large;
   color: #fff;
